<resources>
    <string name="app_name">Android题库</string>
    <!-- 引导页 -->
    <string name="start">开始使用>></string>

    <!-- 欢迎页 -->
    <string name="welcome_title">Android题库</string>
    <string name="welcome_subtitle">有态度的题库软件</string>
    <string name="welcome_copyright">Copyright © 2014–2015  ITVK.CN</string>
    <!-- 登录页 -->
    <string name="btn_login">登录</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="tv_forget_pwd">忘记密码</string>
    <string name="tv_register">注册账号</string>

    <string name="open_drawer">打开</string>
    <string name="close_drawer">关闭</string>
</resources>
