<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:layout_weight="3"
    android:src="@mipmap/welcome_ad"
    android:scaleType="fitXY"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:padding="16dp"
        android:background="@color/main_bg">
        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:background="#ff0000"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textStyle="bold|italic"
            android:textSize="@dimen/text_large_size"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv_2"
            android:layout_centerInParent="true"
            android:layout_alignBottom="@id/tv_1"
            android:layout_width="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/tv_1"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_middle_size"
            android:text="@string/welcome_subtitle"/>
        <TextView
            android:id="@+id/tv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_1"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/welcome_copyright"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_small_size"/>
    </RelativeLayout>
</LinearLayout>