<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/main_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/actionbar_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_register"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>
  <LinearLayout
      android:background="@android:color/white"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <EditText
          android:textColor="@android:color/darker_gray"
          android:id="@+id/et_username"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:background="#ffffff"
          android:drawableLeft="@drawable/username"
          android:drawablePadding="16dp"
          android:hint="@string/hint_username"
          android:paddingLeft="16dp"
          android:singleLine="true"
          android:textSize="@dimen/text_middle_size" />

      <View
          android:layout_width="match_parent"
          android:layout_height="0.5dp"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:background="#cccccc" />

      <EditText
          android:textColor="@android:color/darker_gray"
          android:id="@+id/et_pwd"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:background="@android:color/white"
          android:drawableLeft="@drawable/password"
          android:drawablePadding="16dp"
          android:hint="@string/hint_pwd"
          android:inputType="textPassword"
          android:paddingLeft="16dp"
          android:singleLine="true"
          android:textSize="@dimen/text_middle_size" />

      <View
          android:layout_width="match_parent"
          android:layout_height="0.5dp"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:background="#cccccc" />

      <EditText
          android:textColor="@android:color/darker_gray"
          android:id="@+id/et_nickname"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:background="#ffffff"
          android:hint="请输入昵称"
          android:inputType="text"
          android:paddingLeft="16dp"
          android:singleLine="true"
          android:textSize="@dimen/text_middle_size" />

      <View
          android:layout_width="match_parent"
          android:layout_height="0.5dp"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:background="#cccccc" />

      <EditText
          android:textColor="@android:color/darker_gray"
          android:id="@+id/et_phone"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:background="#ffffff"
          android:hint="请输入电话号码"
          android:inputType="phone"
          android:paddingLeft="16dp"
          android:singleLine="true"
          android:textSize="@dimen/text_middle_size" />

      <Button
          android:id="@+id/reg_ok"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:background="@drawable/btn_selector"
          android:text="注册"
          android:textColor="#ffffff" />
  </LinearLayout>
</LinearLayout>